test/errorhandling/issue_462.mss
#test {
    shield: auto;
    text: auto;
    line-pattern: auto;
    polygon-pattern: auto;
}
